--- a/src/Pages/Styles/Header.css
+++ b/src/Pages/Styles/Header.css
@@ -5,7 +5,8 @@
   top: 0;
   width: 100%;
   z-index: 2;
-  background: #010215;
+  /* background: #010215; */
+  /* backdrop-filter: blur(5px); */
   margin-bottom: -20px;
 }
 
@@ -38,7 +39,6 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
-  
 }
 
 .hamburger-icon {
